# ruoyi-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  application-dev.yml  application-prod.yml  application.yml  ruoyi-rust.sql  user_agent.yml
permit-lib/: Cargo.toml
permit-lib/src/: lib.rs
src/: error.rs  http_server.rs  lib.rs  main.rs  web_data.rs
src/config/: cache_variables.rs  config.rs  global_variables.rs  log.rs  mod.rs
src/controller/: img_controller.rs  mod.rs  sys_auth_controller.rs  sys_config_controller.rs  sys_dept_controller.rs  sys_dict_data_controller.rs  sys_dict_type_controller.rs  sys_menu_controller.rs  sys_notice_controller.rs  sys_post_controller.rs  sys_profile_controller.rs  sys_role_controller.rs  sys_user_controller.rs
src/controller/monitor/: mod.rs  server_controller.rs  sys_logininfor_controller.rs  sys_user_online_controller.rs
src/domain/dto/: config.rs  dept.rs  dict_data.rs  dict_type.rs  logininfor.rs  menu.rs  mod.rs  notice.rs  post.rs  role.rs  role_menu.rs  sign_in.rs  user.rs
src/domain/mapper/: mod.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_logininfor.rs  sys_menu.rs  sys_notice.rs  sys_post.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs
src/domain/table/: enums.rs  sms.rs  tables.rs
src/domain/vo/: config.rs  dept.rs  dict_data.rs  dict_type.rs  jwt.rs  menu.rs  mod.rs  monitor.rs  notice.rs  post.rs  role.rs  router.rs  sign_in.rs  sys_logininfor.rs  user.rs
src/middleware/: auth.rs  auth_actix.rs
src/service/: cache_service.rs  mem_service.rs  mod.rs  redis_service.rs  sys_config_service.rs  sys_dept_service.rs  sys_dict_data_service.rs  sys_dict_type_service.rs  sys_logininfor_service.rs  sys_menu_service.rs  sys_notice_service.rs  sys_post_service.rs  sys_role_menu_service.rs  sys_role_service.rs  sys_sms_service.rs  sys_trash_service.rs  sys_user_role_service.rs  sys_user_service.rs
src/token_auth/: mod.rs
src/util/: base64.rs  hardware.rs  mod.rs  password_encoder.rs  string.rs  web_utils.rs
